--- a/search_app/templates/exhibited_list.html
+++ b/search_app/templates/exhibited_list.html
@@ -5,22 +5,24 @@
 
 <div class="container mt-5">
     <h1 class="text-center mb-4">出品リスト</h1>
-    <ul class="search_result">
+    <ul class="search_result list-group">
         {% for product in products %}
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-            <div>
+        <li class="list-group-item goods_contents">
+            <a class="product_item" href="{% url 'search_app:product_detail' product.pk %}" class="btn btn-primary me-2">
                 <div>
-                    {% if product.image %}
-                        <img src="{{ product.image.url }}" alt="{{ product.name }}" class="goods_img">
-                    {% else %}
-                        <img src="{% static 'img/noImg.jpg' %}" alt="Default Image" class="goods_img">
-                    {% endif %}
+                    <div class="product-images">
+                        {% if product.images.all.count > 0 %}
+                            <img src="{{ product.images.all.0.image.url }}" alt="{{ product.name }}" class="goods_img">
+                        {% else %}
+                            <img src="{% static 'img/noImg.jpg' %}" alt="Default Image" class="goods_img">
+                        {% endif %}
+                    </div>
+                    <div>{{ product.name }}</div>
+                    <div>¥{{ product.price|floatformat:0|intcomma }}</div>
                 </div>
-                <h5>{{ product.name }}</h5>
-                <p>¥{{ product.price|floatformat:0|intcomma }}</p>
-            </div>
-            <div>
-                <a href="{% url 'search_app:product_detail' product.pk %}" class="btn btn-primary me-2">詳細</a>
+                
+            </a>
+            <div class="list-frex">
                 <a href="{% url 'search_app:product_update' product.pk %}" class="btn btn-warning me-2">編集</a>
                 <form action="{% url 'search_app:product_delete' product.pk %}" method="POST" onsubmit="return confirm('本当に削除しますか?');">
                     {% csrf_token %}
@@ -33,4 +35,13 @@
         {% endfor %}
     </ul>
 </div>
+<style>
+    .list-frex{
+        display: flex;
+        justify-content: space-evenly;
+    }
+    div#menu-toggle {
+        display: none;
+    }
+</style>
 {% endblock body %}
