--- a/search_app/templates/product_list.html
+++ b/search_app/templates/product_list.html
@@ -18,7 +18,7 @@
       <!-- 商品リスト --> 
       <ul class="search_result">
       {% for product in products %} 
-        <li class="list-group-item d-flex justify-content-between align-items-center"> 
+        <li class="list-group-item"> 
           <div> 
             <h5>{{ product.name }}</h5> 
             
