--- a/search_app/templates/add_cart.html
+++ b/search_app/templates/add_cart.html
@@ -5,17 +5,18 @@
 {% block body %}
 <link rel="stylesheet" href="{% static 'css/detail.css' %}">
 <div class="container mt-5">
-    <h2 class="text-center mb-4">カート</h2>
+    <h1 class="text-center mb-4">カート</h1>
     <ul class="list-group">
         {% for item in cart_items %}
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-                <a href="{% url 'search_app:product_detail' item.product.id %}">
+            <li class="align-items-center goods_contents">
+                <a class="product_item" href="{% url 'search_app:product_detail' item.product.id %}">
                     <div>
-                        <div>
-                            <img class="goods_img" src="{% if item.product.images.all.count > 0 %}{{ item.product.images.all.0.image.url }}{% else %}{% static 'img/noImg.jpg' %}{% endif %}" alt="{{ item.product.name }}">
+                        <div class="product-images">
+                            <img class="d-block w-100" src="{% if item.product.images.all.count > 0 %}{{ item.product.images.all.0.image.url }}{% else %}{% static 'img/noImg.jpg' %}{% endif %}" alt="{{ item.product.name }}">
                         </div>
                         <!-- <h5><a href="{% url 'search_app:product_detail' item.product.id %}" class="text-dark">{{ item.product.name }}</a></h5> -->
-                        <p>¥{{ item.product.price|floatformat:0|intcomma }} x {{ item.quantity }}</p> 
+                        <div>{{ item.product.name }}</div>
+                        <div>¥{{ item.product.price|floatformat:0|intcomma }} x {{ item.quantity }}</div> 
                     </div>
                 </a>
                 <form action="{% url 'search_app:remove_from_cart' item.pk %}" method="POST" style="display: inline;">
@@ -38,4 +39,18 @@
         </div>
     </div>
 </div>
+<style>
+    ul.list-group {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+    list-style-type: none;
+    padding: 0;
+    margin: 30px auto 0 auto;
+    width: 80%;
+}
+div#menu-toggle {
+    display: none;
+}
+</style>
 {% endblock body %}
