--- a/search_app/templates/purchase_history.html
+++ b/search_app/templates/purchase_history.html
@@ -8,7 +8,7 @@
     <h2 class="text-center mb-4">購入履歴</h2>
     <ul class="list-group">
         {% for item in history_items %}
-        <li class="list-group-item d-flex justify-content-between align-items-center">
+        <li class="list-group-item">
             <div>
                 <h5>{{ item.product.name }}</h5>
                 <p>¥{{ item.total_price|floatformat:0|intcomma }} x {{ item.quantity }}</p>
