--- a/search_app/templates/search.html
+++ b/search_app/templates/search.html
@@ -36,11 +36,6 @@
             width: 100%;  /* 幅を100%に設定 */
         }
 
-        .product-images img {
-            width: 100%;  /* 親要素の幅に従う */
-            height: auto;  /* アスペクト比を保持する */
-        }
-
         /* testimonials セクション用 */
         .testimonials .item img {
             width: 100%;
@@ -68,7 +63,7 @@
     <section class="search_body">
         <ul class="search_result">
             {% for product in page_obj %}
-            <li>
+            <li class="goods_contents">
                 <a class="product_item" href="{% url 'search_app:product_detail' product.id %}">
                     <div class="product-images" data-images='[{% for image in product.images.all %}"{{ image.image.url }}"{% if not forloop.last %},{% endif %}{% endfor %}]'>
                         <img class="d-block w-100" src="{% if product.images.all.count > 0 %}{{ product.images.all.0.image.url }}{% else %}{% static 'img/noImg.jpg' %}{% endif %}" alt="{{ product.name }}">
