--- a/static/css/base.css
+++ b/static/css/base.css
@@ -39,6 +39,13 @@ a {
     color: #7a615a;
 }
 
+p {
+    margin: 10px 0;
+    color: #7a615a!important;;
+}
+h1{
+    color: #7a615a!important;
+}
 h3 {
     margin: 0!important;
 }
@@ -56,7 +63,16 @@ h2{
     margin: 0 0 0 auto;
     flex-direction: row-reverse;
 }
-
+.product-images img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+}
+.goods_contents{
+    height: fit-content;
+    background: white;
+    padding: 10px;
+}
 /* モーダルのスタイル */
 .modal {
     display: none; 
@@ -125,9 +141,6 @@ ul.search_result{
     margin: 30px auto 0 auto;
     width: 80%;
 }
-/* .search_body ul li {
-    width: 20%;
-} */
 
 ul.search_result li:hover {
     opacity: 0.7;
